# Machine-Learning

./: README.md
Classification/: Bayes.ipynb  DescisonTree.ipynb  kernel_svm.ipynb  knn_neighbours.ipynb  logistic_regression.ipynb  svm.ipynb
Clustering/: kmeansclusterring.ipynb
DataPreprocessing/: data_preprocessing.ipynb  titanic_procesing.ipynb
Regression Model/: Descission_Tree.ipynb  Energy Efficiency Dataset.ipynb  bostonHousing.ipynb  multiple_linear_regression.ipynb  polynomial_regression.ipynb  simplelinearregression.ipynb  student_performance.ipynb  support_vector_regression.ipynb
S13 & S23 - Machine Learning A-Z (Model Selection)/Machine Learning A-Z (Model Selection)/Regression/: decision_tree_regression.ipynb  random_forest_regression.ipynb  support_vector_regression.ipynb
end-to-end-heart_disease_classification/: .gitignore  README.md  mlflow.ipynb  mlflow_end_to_end.ipynb  prediction.ipynb  pyproject.toml  requirements.txt
end-to-end-heart_disease_classification/mlruns/0/: meta.yaml
house_price_mlflow/: house_price.ipynb
house_price_mlflow/mlruns/0/: meta.yaml
house_price_mlflow/mlruns/0/1c732776ea4f48aa904b71fb97af141b/: meta.yaml
house_price_mlflow/mlruns/0/5ead726686f144b6bc5c6cbbeaa0e344/: meta.yaml
house_price_mlflow/mlruns/0/6c6449034d104fc990bd277a2d036a1a/: meta.yaml
house_price_mlflow/mlruns/0/7ff5c4824a6e46628d1188bda727a56b/: meta.yaml
house_price_mlflow/mlruns/0/8dad117447d448fb95c4bcc6e6fe1316/: meta.yaml
house_price_mlflow/mlruns/0/a5df233ef1c14ba995110c40280a3108/: meta.yaml
(+33 files in other folders)
